# experiments

./: LICENSE  README.md
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/workflows/: copilot-setup-steps.yml
any-value-helper/: README.md  any_value.py  demo.py  pyproject.toml  test_any_value.py  test_error_demo.py
dramatiq-asyncio-memory-leak-followup/: README.md  TECHNICAL_EXPLANATION.md  pyproject.toml  test_fixed_middleware.py  test_memory_leak.py
dramatiq-memory-leak/: ADDITIONAL_SCENARIOS.md  COMPARISON.md  FINDINGS.md  README.md  SOLUTION.md  SUMMARY.md  fixed_asyncio_middleware.py  memory_leak_exception.py  memory_leak_sleep.py  memory_usage_exception.csv  memory_usage_fixed.csv  memory_usage_nested.csv  memory_usage_sleep.csv  plot_memory.py  run_worker_concurrent.py  run_worker_exception.py  run_worker_fixed.py  run_worker_nested.py  run_worker_results.py  run_worker_sleep.py  scenario_concurrent_exceptions.py  scenario_large_results.py  scenario_nested_exceptions.py  test_fixed_middleware.py
hatchling-pyo3-plugin/: ARCHITECTURE.md  BUILD_OUTPUT.md  CONFIGURATION.md  README.md  SUMMARY.md  pyproject.toml
hatchling-pyo3-plugin/demo/: .gitignore  Cargo.toml  README.md  pyproject.toml  test_comprehensive.py  test_demo.py
hatchling-pyo3-plugin/demo/demo_pyo3_extension/: __init__.py
hatchling-pyo3-plugin/demo/src/: lib.rs
hatchling-pyo3-plugin/hatchling_pyo3_plugin/: __init__.py  hooks.py
markdown-to-pdf-rust/: Cargo.toml  README.md
markdown-to-pdf-rust/samples/: showcase.md  simple.md  technical.md
markdown-to-pdf-rust/src/: main.rs  pdf_renderer.rs
movie-duration-by-year/: README.md  analysis_results.txt  analyze.py
openapi-python-types/: .gitignore  README.md  example_output.py  example_spec.yaml  polar_api_types.py  pyproject.toml
openapi-python-types/openapi_python_types/: __init__.py  __main__.py  ast_utils.py  context.py  generator.py  transform_components.py  transform_paths.py  transform_schema.py
openapi-python-types/tests/: test_generator.py
prev-framework/: .gitignore  README.md  main.py  pyproject.toml
prev-framework/app/: route.py
prev-framework/app/dashboard/: route.py
prev-framework/app/dashboard/users/: route.py
prev-framework/app/users/[id]/: route.py
prev-framework/app/users/{id}/: route.py
prev-framework/prev/: __init__.py  _response.py  _routing.py  _tagflow.py  html.py
prev-framework/tests/: test_html.py  test_prev.py  test_response.py  test_routing.py  test_tagflow.py
sqlalchemy-asyncio-anyio/: .gitignore  CODE_STRUCTURE.md  COMPARISON.md  README.md  SUMMARY.md  advanced_demo.db  advanced_demo.py  anyio_demo.db  anyio_engine.py  async_sqlalchemy.py  benchmark_concurrent_anyio.db  benchmark_results.txt  benchmark_standard.db  comparison.py  demo.py  example.py  pyproject.toml  standard_demo.db  standard_demo.py  test_all.sh  test_basic.py  test_orm.py
starlette-openapi-extension/: IMPLEMENTATION_SUMMARY.md  README.md  demo.py  pyproject.toml  starlette_openapi.py  test_demo.py  test_starlette_openapi.py
tagflow-performance-analysis/: README.md  analysis_results.md  benchmark_optimizations.py  final_benchmark.py  optimized_tagflow.py  profile_tagflow.py  pyproject.toml  tagflow_profile_complex_page.prof  tagflow_profile_comprehensive.prof  tagflow_profile_data_table.prof  tagflow_profile_simple_page.prof
tagflow-reimplementation/: PERFORMANCE_RESULTS.md  README.md  benchmark.py  demo.py  pyproject.toml  tagflow_reimpl.py  test_tagflow_reimpl.py
tagflow-rust-pyo3/: Cargo.toml  README.md  benchmark.py  pyproject.toml
tagflow-rust-pyo3/python/tagflow_rust/: __init__.py
tagflow-rust-pyo3/src/: lib.rs
tagflow-rust-pyo3/tests/: test_tagflow_rust.py
tagflow-vs-jinja-benchmark/: .gitignore  README.md  benchmark.py  benchmark_results_20250913_131940.txt  benchmark_results_20250913_132735.txt  jinja_comparison.py  pyproject.toml  run_benchmark.py
tagflow-vs-jinja-benchmark/templates/: complex_page.jinja2  data_table.jinja2  simple_page.jinja2
uvloop-updated-benchmark/: README.md  SUMMARY.md  benchmark.py  benchmark_results.txt  benchmark_results_20251010_125324.txt  pyproject.toml
