[project]
name = "any-value-helper"
version = "0.1.0"
description = "A smarter ANY helper for testing with type checking and validation"
authors = [
    {name = "Copilot", email = "copilot@github.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "annotated-types>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
