[project]
name = "dramatiq-asyncio-memory-leak-followup"
version = "0.1.0"
description = "Unit tests and explanation for Dramatiq AsyncIO memory leak fix"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dramatiq>=1.16.0",
    "redis>=5.0.0",
    "psutil>=5.9.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
