[project]
name = "openapi-python-types"
version = "0.1.0"
description = "Generate Python type definitions from OpenAPI specifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
openapi-python-types = "openapi_python_types.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.12.20240917",
]
