[project]
name = "starlette-openapi-extension"
version = "0.1.0"
description = "Lightweight extension for Starlette with automatic OpenAPI schema generation"
authors = [
    {name = "Copilot", email = "copilot@github.com"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "starlette>=0.41.0",
    "pydantic>=2.0.0",
    "email-validator>=2.0.0",  # Required for EmailStr validation
    "uvicorn>=0.30.0",  # Required to run the demo
    "httpx>=0.24.0",  # Required for test_demo.py
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",  # For testing Starlette apps
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
