[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tagflow-performance-analysis"
version = "0.1.0"
description = "Performance analysis and optimization experiments for Tagflow vs Jinja2"
authors = [
    {name = "Performance Analysis", email = "analysis@example.com"}
]
dependencies = [
    "tagflow>=0.1.0",
    "jinja2>=3.1.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []